# darktable

./: .gitignore  .gitmodules  DefineOptions.cmake
.github/workflows/: ci.yml
cmake/modules/: FindGGML.cmake  FindONNXRuntime.cmake
data/: CMakeLists.txt  ai_models.json  darktableconfig.xml.in
data/themes/: darktable-neo-dark.css  darktable-neo-darker.css  darktable-neo-grey.css  darktable-neo.css
packaging/windows/: README.md
src/: CMakeLists.txt
src/ai/: CMakeLists.txt  README.md  backend.h  backend_common.c  backend_onnx.c  darktable_ai.c  darktable_ai.h  depth.c  depth.h  onnx_backend.c  onnx_backend.h  segmentation.c  segmentation.h
src/common/: ai_models.c  ai_models.h  darktable.c  darktable.h  iop_order.c  ras2vect.c  ras2vect.h  segmentation.cpp  segmentation.h  variables.c
src/common/ai/: depth.c  depth.h  embeddings.c  embeddings.h  restore.c  restore.h  segmentation.c  segmentation.h  task_contracts.c  task_contracts.h
src/control/: signal.c  signal.h
src/develop/: blend.c  blend.h  blend_gui.c  masks.h
src/develop/masks/: masks.c  object.c
src/dtgtk/: paint.c  paint.h  thumbnail.c  thumbnail.h
src/gui/: preferences.c  preferences_ai.c  welcome.c  welcome.h
src/iop/: CMakeLists.txt  depthgrade.c  rasterfile.c
src/libs/: CMakeLists.txt  denoise_ai.c  image.c  masks.c  metadata_view.c  neural_restore.c
tools/: download_onnxruntime.sh
